k8s/_archive/10b-ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itsm-ingress
  namespace: twisteritsm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: itsm.twisterlab.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: itsm-api
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itsm-web-ext
            port:
              number: 4000
  tls:
  - hosts:
    - itsm.twisterlab.local
    secretName: itsm-tls
